--- a/setting.yaml
+++ b/setting.yaml
@@ -1,11 +1,11 @@
 route: ./
 seed: 42
-CUDA_VISIBLE_DEVICES: 0
+CUDA_VISIBLE_DEVICES: "0"
 
 im_size: 160
 im_size_before_crop: 180 # ~ for not using this
 label_mode: cate_int
-BATCH_SIZE: 128
+BATCH_SIZE: 256
 
 valid_ratio: 0.01
 test_ratio: ~
